[R] publish org files

--- a/html/galera-code.html
+++ b/html/galera-code.html
@@ -16,23 +16,23 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf7b53d8">1. overview</a></li>
-<li><a href="#orgdca7e86">2. wsrep-api</a>
+<li><a href="#orgf3f46c8">1. overview</a></li>
+<li><a href="#orgda6f377">2. wsrep-api</a>
 <ul>
-<li><a href="#org0c1f0d4">2.1. overview</a></li>
-<li><a href="#org7fcca0f">2.2. concept</a></li>
-<li><a href="#org6601cf8">2.3. wsrep_init_args</a></li>
-<li><a href="#org662f03c">2.4. wsrep_t</a></li>
+<li><a href="#org8e3cfe4">2.1. overview</a></li>
+<li><a href="#orgca9e919">2.2. concept</a></li>
+<li><a href="#orge22da9d">2.3. wsrep_init_args</a></li>
+<li><a href="#org2a7e380">2.4. wsrep_t</a></li>
 </ul>
 </li>
-<li><a href="#orgfca01b8">3. gcomm</a></li>
-<li><a href="#org2fad170">4. tests</a></li>
+<li><a href="#org249ee0a">3. gcomm</a></li>
+<li><a href="#org08b0f23">4. tests</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgf7b53d8" class="outline-2">
-<h2 id="orgf7b53d8"><span class="section-number-2">1</span> overview</h2>
+<div id="outline-container-orgf3f46c8" class="outline-2">
+<h2 id="orgf3f46c8"><span class="section-number-2">1</span> overview</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 下面这些子目录:
@@ -64,12 +64,12 @@
 </div>
 </div>
 
-<div id="outline-container-orgdca7e86" class="outline-2">
-<h2 id="orgdca7e86"><span class="section-number-2">2</span> wsrep-api</h2>
+<div id="outline-container-orgda6f377" class="outline-2">
+<h2 id="orgda6f377"><span class="section-number-2">2</span> wsrep-api</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org0c1f0d4" class="outline-3">
-<h3 id="org0c1f0d4"><span class="section-number-3">2.1</span> overview</h3>
+<div id="outline-container-org8e3cfe4" class="outline-3">
+<h3 id="org8e3cfe4"><span class="section-number-3">2.1</span> overview</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 files:
@@ -112,8 +112,8 @@ capabilities:
 </div>
 </div>
 
-<div id="outline-container-org7fcca0f" class="outline-3">
-<h3 id="org7fcca0f"><span class="section-number-3">2.2</span> concept</h3>
+<div id="outline-container-orgca9e919" class="outline-3">
+<h3 id="orgca9e919"><span class="section-number-3">2.2</span> concept</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>sst(snapshot state transfer)</li>
@@ -149,8 +149,8 @@ capabilities:
 </div>
 </div>
 
-<div id="outline-container-org6601cf8" class="outline-3">
-<h3 id="org6601cf8"><span class="section-number-3">2.3</span> wsrep_init_args</h3>
+<div id="outline-container-orge22da9d" class="outline-3">
+<h3 id="orge22da9d"><span class="section-number-3">2.3</span> wsrep_init_args</h3>
 <div class="outline-text-3" id="text-2-3">
 <p>
 #note: 这个应该是和上层相关的实现比如MySQL，如何apply, commit等
@@ -177,8 +177,8 @@ capabilities:
 </div>
 </div>
 
-<div id="outline-container-org662f03c" class="outline-3">
-<h3 id="org662f03c"><span class="section-number-3">2.4</span> wsrep_t</h3>
+<div id="outline-container-org2a7e380" class="outline-3">
+<h3 id="org2a7e380"><span class="section-number-3">2.4</span> wsrep_t</h3>
 <div class="outline-text-3" id="text-2-4">
 <p>
 #note: 这个应该是和下层相关的实现比如Galera，它定义了整个replication的逻辑
@@ -230,8 +230,8 @@ capabilities:
 </div>
 </div>
 
-<div id="outline-container-orgfca01b8" class="outline-2">
-<h2 id="orgfca01b8"><span class="section-number-2">3</span> gcomm</h2>
+<div id="outline-container-org249ee0a" class="outline-2">
+<h2 id="org249ee0a"><span class="section-number-2">3</span> gcomm</h2>
 <div class="outline-text-2" id="text-3">
 <hr />
 <p>
@@ -276,8 +276,8 @@ Delivery Order
 </div>
 </div>
 
-<div id="outline-container-org2fad170" class="outline-2">
-<h2 id="org2fad170"><span class="section-number-2">4</span> tests</h2>
+<div id="outline-container-org08b0f23" class="outline-2">
+<h2 id="org08b0f23"><span class="section-number-2">4</span> tests</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>conf # configure files</li>
