--- a/html/cassandra.html
+++ b/html/cassandra.html
@@ -16,24 +16,24 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2ee034a">1. ABSTRACT</a></li>
-<li><a href="#org6bd7384">2. INTRODUCTION</a></li>
-<li><a href="#org13572be">3. RELATED WORK</a></li>
-<li><a href="#org85f128e">4. DATA MODEL</a></li>
-<li><a href="#org98d3322">5. API</a></li>
-<li><a href="#org0c8bd73">6. SYSTEM ARCHITECTURE</a>
+<li><a href="#org7389b0f">1. ABSTRACT</a></li>
+<li><a href="#orge890e43">2. INTRODUCTION</a></li>
+<li><a href="#orgff5fa13">3. RELATED WORK</a></li>
+<li><a href="#org7b5d77b">4. DATA MODEL</a></li>
+<li><a href="#org85e6e6e">5. API</a></li>
+<li><a href="#org756a090">6. SYSTEM ARCHITECTURE</a>
 <ul>
-<li><a href="#orgb2271a9">6.1. Partitioning</a></li>
-<li><a href="#org37db764">6.2. Replication</a></li>
-<li><a href="#org00a1a52">6.3. Membership</a></li>
-<li><a href="#orgaafe981">6.4. Bootstrapping</a></li>
-<li><a href="#org762f2cb">6.5. Scaling the Cluster</a></li>
-<li><a href="#orgb8e235c">6.6. Local Persistence</a></li>
-<li><a href="#orga5a1fd4">6.7. Implementation Details</a></li>
+<li><a href="#org52f7d38">6.1. Partitioning</a></li>
+<li><a href="#org9fcd694">6.2. Replication</a></li>
+<li><a href="#org21a51b4">6.3. Membership</a></li>
+<li><a href="#orgdc4feca">6.4. Bootstrapping</a></li>
+<li><a href="#org941c079">6.5. Scaling the Cluster</a></li>
+<li><a href="#orge74f6bd">6.6. Local Persistence</a></li>
+<li><a href="#org0625dc4">6.7. Implementation Details</a></li>
 </ul>
 </li>
-<li><a href="#org0155cde">7. PRACTICAL EXPERIENCES</a></li>
-<li><a href="#org33fcc4f">8. CONCLUSION</a></li>
+<li><a href="#org2ab505c">7. PRACTICAL EXPERIENCES</a></li>
+<li><a href="#org3362b94">8. CONCLUSION</a></li>
 </ul>
 </div>
 </div>
@@ -43,17 +43,17 @@
 <li><a href="http://www.datastax.com/documentation/articles/cassandra/cassandrathenandnow.html">Facebook’s Cassandra paper, annotated and compared to Apache Cassandra 2.0</a></li>
 </ul>
 
-<div id="outline-container-org2ee034a" class="outline-2">
-<h2 id="org2ee034a"><span class="section-number-2">1</span> ABSTRACT</h2>
+<div id="outline-container-org7389b0f" class="outline-2">
+<h2 id="org7389b0f"><span class="section-number-2">1</span> ABSTRACT</h2>
 </div>
-<div id="outline-container-org6bd7384" class="outline-2">
-<h2 id="org6bd7384"><span class="section-number-2">2</span> INTRODUCTION</h2>
+<div id="outline-container-orge890e43" class="outline-2">
+<h2 id="orge890e43"><span class="section-number-2">2</span> INTRODUCTION</h2>
 </div>
-<div id="outline-container-org13572be" class="outline-2">
-<h2 id="org13572be"><span class="section-number-2">3</span> RELATED WORK</h2>
+<div id="outline-container-orgff5fa13" class="outline-2">
+<h2 id="orgff5fa13"><span class="section-number-2">3</span> RELATED WORK</h2>
 </div>
-<div id="outline-container-org85f128e" class="outline-2">
-<h2 id="org85f128e"><span class="section-number-2">4</span> DATA MODEL</h2>
+<div id="outline-container-org7b5d77b" class="outline-2">
+<h2 id="org7b5d77b"><span class="section-number-2">4</span> DATA MODEL</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>A table in Cassandra is a distributed multi dimensional map indexed by a key.
@@ -72,8 +72,8 @@
 </div>
 </div>
 
-<div id="outline-container-org98d3322" class="outline-2">
-<h2 id="org98d3322"><span class="section-number-2">5</span> API</h2>
+<div id="outline-container-org85e6e6e" class="outline-2">
+<h2 id="org85e6e6e"><span class="section-number-2">5</span> API</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 The Cassandra API consists of the following three simple methods.
@@ -89,12 +89,12 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-org0c8bd73" class="outline-2">
-<h2 id="org0c8bd73"><span class="section-number-2">6</span> SYSTEM ARCHITECTURE</h2>
+<div id="outline-container-org756a090" class="outline-2">
+<h2 id="org756a090"><span class="section-number-2">6</span> SYSTEM ARCHITECTURE</h2>
 <div class="outline-text-2" id="text-6">
 </div>
-<div id="outline-container-orgb2271a9" class="outline-3">
-<h3 id="orgb2271a9"><span class="section-number-3">6.1</span> Partitioning</h3>
+<div id="outline-container-org52f7d38" class="outline-3">
+<h3 id="org52f7d38"><span class="section-number-3">6.1</span> Partitioning</h3>
 <div class="outline-text-3" id="text-6-1">
 <ul class="org-ul">
 <li>Cassandra partitions data across the cluster using consistent hashing but uses an <b>order pre-serving hash function</b> to do so.</li>
@@ -113,8 +113,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-org37db764" class="outline-3">
-<h3 id="org37db764"><span class="section-number-3">6.2</span> Replication</h3>
+<div id="outline-container-org9fcd694" class="outline-3">
+<h3 id="org9fcd694"><span class="section-number-3">6.2</span> Replication</h3>
 <div class="outline-text-3" id="text-6-2">
 <ul class="org-ul">
 <li>Cassandra provides the client with various options for how data needs to be replicated. Cassandra provides various replication poli- cies such as “Rack Unaware”, “Rack Aware” (within a data- center) and “Datacenter Aware”. Replicas are chosen based on the replication policy chosen by the application. If cer-tain application chooses “Rack Unaware” replication strat-egy then the non-coordinator replicas are chosen by picking N-1 successors of the coordinator on the ring. For “Rack Aware” and “Datacenter Aware” strategies the algorithm is slightly more involved.（可以很好地为跨数据中心服务）</li>
@@ -124,8 +124,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-org00a1a52" class="outline-3">
-<h3 id="org00a1a52"><span class="section-number-3">6.3</span> Membership</h3>
+<div id="outline-container-org21a51b4" class="outline-3">
+<h3 id="org21a51b4"><span class="section-number-3">6.3</span> Membership</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li><b>Cluster membership in Cassandra is based on Scuttle-butt</b>, a very efficient anti-entropy Gossip based mech-anism. The salient feature of Scuttlebutt is that it has very efficient CPU utilization and very efficient utilization of the gossip channel. Within the Cassandra system Gossip is not only used for membership but also to disseminate other sys-tem related control state.</li>
@@ -137,8 +137,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-orgaafe981" class="outline-3">
-<h3 id="orgaafe981"><span class="section-number-3">6.4</span> Bootstrapping</h3>
+<div id="outline-container-orgdc4feca" class="outline-3">
+<h3 id="orgdc4feca"><span class="section-number-3">6.4</span> Bootstrapping</h3>
 <div class="outline-text-3" id="text-6-4">
 <ul class="org-ul">
 <li>When a node starts for the first time, it chooses a random token for its position in the ring. For fault tolerance, the mapping is persisted to disk locally and also in Zookeeper. The token information is then gossiped around the cluster. This is how we know about all nodes and their respective po-sitions in the ring. This enables any node to route a request for a key to the correct node in the cluster.</li>
@@ -147,8 +147,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-org762f2cb" class="outline-3">
-<h3 id="org762f2cb"><span class="section-number-3">6.5</span> Scaling the Cluster</h3>
+<div id="outline-container-org941c079" class="outline-3">
+<h3 id="org941c079"><span class="section-number-3">6.5</span> Scaling the Cluster</h3>
 <div class="outline-text-3" id="text-6-5">
 <ul class="org-ul">
 <li>The node giving up the data streams the data over to the new node using kernel-kernel copy techniques. Operational experience has shown that data can be transferred at the rate of 40 MB/sec from a single node. We are working on improving this by having multiple replicas take part in the bootstrap transfer thereby parallelizing the effort, similar to Bittorrent.（数据转移底层使用kernel-to-kernel的拷贝技术，后续考虑类似bt方式来加快这个过程）</li>
@@ -156,8 +156,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-orgb8e235c" class="outline-3">
-<h3 id="orgb8e235c"><span class="section-number-3">6.6</span> Local Persistence</h3>
+<div id="outline-container-orge74f6bd" class="outline-3">
+<h3 id="orge74f6bd"><span class="section-number-3">6.6</span> Local Persistence</h3>
 <div class="outline-text-3" id="text-6-6">
 <ul class="org-ul">
 <li>We have a dedicated disk on each machine for the commit log since all writes into the commit log are sequential and so we can maximize disk throughput.（有专门的硬盘来写入commit log）</li>
@@ -166,8 +166,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-orga5a1fd4" class="outline-3">
-<h3 id="orga5a1fd4"><span class="section-number-3">6.7</span> Implementation Details</h3>
+<div id="outline-container-org0625dc4" class="outline-3">
+<h3 id="org0625dc4"><span class="section-number-3">6.7</span> Implementation Details</h3>
 <div class="outline-text-3" id="text-6-7">
 <ul class="org-ul">
 <li>All sys-tem control messages rely on UDP based messaging while the application related messages for replication and request routing relies on TCP.（系统控制走UDP）</li>
@@ -176,8 +176,8 @@ columnName can refer to a specific column within a col-umn, a column family, a s
 </div>
 </div>
 
-<div id="outline-container-org0155cde" class="outline-2">
-<h2 id="org0155cde"><span class="section-number-2">7</span> PRACTICAL EXPERIENCES</h2>
+<div id="outline-container-org2ab505c" class="outline-2">
+<h2 id="org2ab505c"><span class="section-number-2">7</span> PRACTICAL EXPERIENCES</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 In the process of designing, implementing and maintaining Cassandra we gained a lot of useful experience and learned numerous lessons. <b>One very fundamental lesson learned was not to add any new feature without understanding the effects of its usage by applications. Most problematic scenarios do not stem from just node crashes and network partitions.</b> We share just a few interesting scenarios here.
@@ -192,8 +192,8 @@ In the process of designing, implementing and maintaining Cassandra we gained a 
 </div>
 </div>
 
-<div id="outline-container-org33fcc4f" class="outline-2">
-<h2 id="org33fcc4f"><span class="section-number-2">8</span> CONCLUSION</h2>
+<div id="outline-container-org3362b94" class="outline-2">
+<h2 id="org3362b94"><span class="section-number-2">8</span> CONCLUSION</h2>
 </div>
 </div>
 <div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/cassandra.html';this.page.identifier = 'cassandra.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
