--- a/html/intro-druid-real-time-analytics-at-a-billion-rows-per-second.html
+++ b/html/intro-druid-real-time-analytics-at-a-billion-rows-per-second.html
@@ -16,10 +16,10 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org7a3ae52">1. Background</a></li>
-<li><a href="#org60bdcee">2. Failed Solution I: Dynamic Roll-Ups with a RDBMS</a></li>
-<li><a href="#orgf26cc4f">3. Failed Solution II: Pre-compute the World in NoSQL</a></li>
-<li><a href="#orged067cf">4. Introducing Druid: A Distributed, In-Memory OLAP Store</a></li>
+<li><a href="#org30c6a78">1. Background</a></li>
+<li><a href="#orgfe69370">2. Failed Solution I: Dynamic Roll-Ups with a RDBMS</a></li>
+<li><a href="#org1c0b30c">3. Failed Solution II: Pre-compute the World in NoSQL</a></li>
+<li><a href="#org01f13a0">4. Introducing Druid: A Distributed, In-Memory OLAP Store</a></li>
 </ul>
 </div>
 </div>
@@ -27,8 +27,8 @@
 <a href="http://metamarkets.com/2011/druid-part-i-real-time-analytics-at-a-billion-rows-per-second/">http://metamarkets.com/2011/druid-part-i-real-time-analytics-at-a-billion-rows-per-second/</a>
 </p>
 
-<div id="outline-container-org7a3ae52" class="outline-2">
-<h2 id="org7a3ae52"><span class="section-number-2">1</span> Background</h2>
+<div id="outline-container-org30c6a78" class="outline-2">
+<h2 id="org30c6a78"><span class="section-number-2">1</span> Background</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Druid is the distributed, in-memory OLAP data store that resulted.（分布式全内存的OLAP存储系统） 有两个名字需要稍微了解一下：
@@ -103,8 +103,8 @@ beta data set主要包含3个部分：
 </div>
 </div>
 
-<div id="outline-container-org60bdcee" class="outline-2">
-<h2 id="org60bdcee"><span class="section-number-2">2</span> Failed Solution I: Dynamic Roll-Ups with a RDBMS</h2>
+<div id="outline-container-orgfe69370" class="outline-2">
+<h2 id="orgfe69370"><span class="section-number-2">2</span> Failed Solution I: Dynamic Roll-Ups with a RDBMS</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 So about a year ago, we fired up a RDBMS instance (actually, the Greenplum Community Edition, running on an m1.large EC2 box) 开始使用一些关系数据库，但是存在下面这些问题：
@@ -131,8 +131,8 @@ We also benchmarked plain Postgres, MySQL, and InfoBright, but did not observe d
 </div>
 </div>
 
-<div id="outline-container-orgf26cc4f" class="outline-2">
-<h2 id="orgf26cc4f"><span class="section-number-2">3</span> Failed Solution II: Pre-compute the World in NoSQL</h2>
+<div id="outline-container-org1c0b30c" class="outline-2">
+<h2 id="org1c0b30c"><span class="section-number-2">3</span> Failed Solution II: Pre-compute the World in NoSQL</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>In short, we took all of our data and pre-computed aggregates for every combination of dimensions. At query time we need only locate the specific pre-computed aggregate and and return it: an O(1) key-value lookup. This made things fast and worked wonderfully when we had a six dimension beta data set.(在NoSQL里面需要预先计算很多维度的组合，但是在查询的时候非常快。如果维度只有6个的时候还是工作非常快速的）</li>
@@ -142,8 +142,8 @@ We also benchmarked plain Postgres, MySQL, and InfoBright, but did not observe d
 </div>
 </div>
 
-<div id="outline-container-orged067cf" class="outline-2">
-<h2 id="orged067cf"><span class="section-number-2">4</span> Introducing Druid: A Distributed, In-Memory OLAP Store</h2>
+<div id="outline-container-org01f13a0" class="outline-2">
+<h2 id="org01f13a0"><span class="section-number-2">4</span> Introducing Druid: A Distributed, In-Memory OLAP Store</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 下面是前面两种方式各自的问题：
