--- a/html/spark-paper.html
+++ b/html/spark-paper.html
@@ -16,26 +16,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org8c8df87">1. Abstract</a></li>
-<li><a href="#orgbfa014c">2. Introduction</a></li>
-<li><a href="#org2d0ebdc">3. Programming Model</a>
+<li><a href="#org43aacee">1. Abstract</a></li>
+<li><a href="#org95fb802">2. Introduction</a></li>
+<li><a href="#orgf324c8d">3. Programming Model</a>
 <ul>
-<li><a href="#orgc746859">3.1. Resilient Distributed Datasets (RDDs)</a></li>
-<li><a href="#orge9b8868">3.2. Parallel Operations</a></li>
-<li><a href="#orgc4d7f61">3.3. Shared Variables</a></li>
+<li><a href="#orgc2fb3fe">3.1. Resilient Distributed Datasets (RDDs)</a></li>
+<li><a href="#orgf8fbc05">3.2. Parallel Operations</a></li>
+<li><a href="#orgac82e07">3.3. Shared Variables</a></li>
 </ul>
 </li>
-<li><a href="#org68d4d47">4. Examples</a></li>
-<li><a href="#orgd9edc10">5. Implementation</a>
+<li><a href="#orga07e2f1">4. Examples</a></li>
+<li><a href="#org1d39af4">5. Implementation</a>
 <ul>
-<li><a href="#org637e950">5.1. RDD</a></li>
-<li><a href="#org04fb1cd">5.2. Shared Variables</a></li>
-<li><a href="#org27ad051">5.3. Interpret Intergation</a></li>
+<li><a href="#org20b88b6">5.1. RDD</a></li>
+<li><a href="#org80a22e3">5.2. Shared Variables</a></li>
+<li><a href="#org57cbf44">5.3. Interpret Intergation</a></li>
 </ul>
 </li>
-<li><a href="#org81f0813">6. Results</a></li>
-<li><a href="#orgca50539">7. Related Work</a></li>
-<li><a href="#orga0c7af0">8. Discussion and Future Work</a></li>
+<li><a href="#org0d67a37">6. Results</a></li>
+<li><a href="#org74e504f">7. Related Work</a></li>
+<li><a href="#orgb9c71c5">8. Discussion and Future Work</a></li>
 </ul>
 </div>
 </div>
@@ -43,8 +43,8 @@
 <a href="https://www.usenix.org/legacy/events/hotcloud10/tech/full_papers/Zaharia.pdf">https://www.usenix.org/legacy/events/hotcloud10/tech/full_papers/Zaharia.pdf</a> @ 2010
 </p>
 
-<div id="outline-container-org8c8df87" class="outline-2">
-<h2 id="org8c8df87"><span class="section-number-2">1</span> Abstract</h2>
+<div id="outline-container-org43aacee" class="outline-2">
+<h2 id="org43aacee"><span class="section-number-2">1</span> Abstract</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>MapReduce and its variants have been highly successful in implementing large-scale data-intensive applications on commodity clusters. However, most of these systems are built around an acyclic data flow model that is not suitable for other popular applications. This paper fo- cuses on one such class of applications: those that reuse a working set of data across multiple parallel operations. This includes many iterative machine learning algorithms, as well as interactive data analysis tools.（迭代计算和交互式分析）</li>
@@ -54,8 +54,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgbfa014c" class="outline-2">
-<h2 id="orgbfa014c"><span class="section-number-2">2</span> Introduction</h2>
+<div id="outline-container-org95fb802" class="outline-2">
+<h2 id="org95fb802"><span class="section-number-2">2</span> Introduction</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 In this paper, we focus on one such class of applications: those that reuse a working set of data across multiple parallel operations. This includes two use cases where we have seen Hadoop users report that MapReduce is deficient:
@@ -74,8 +74,8 @@ In this paper, we focus on one such class of applications: those that reuse a wo
 </div>
 </div>
 
-<div id="outline-container-org2d0ebdc" class="outline-2">
-<h2 id="org2d0ebdc"><span class="section-number-2">3</span> Programming Model</h2>
+<div id="outline-container-orgf324c8d" class="outline-2">
+<h2 id="orgf324c8d"><span class="section-number-2">3</span> Programming Model</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>To use Spark, developers write a driver program that im- plements the high-level control flow of their application and launches various operations in parallel.</li>
@@ -84,8 +84,8 @@ In this paper, we focus on one such class of applications: those that reuse a wo
 </ul>
 </div>
 
-<div id="outline-container-orgc746859" class="outline-3">
-<h3 id="orgc746859"><span class="section-number-3">3.1</span> Resilient Distributed Datasets (RDDs)</h3>
+<div id="outline-container-orgc2fb3fe" class="outline-3">
+<h3 id="orgc2fb3fe"><span class="section-number-3">3.1</span> Resilient Distributed Datasets (RDDs)</h3>
 <div class="outline-text-3" id="text-3-1">
 <ul class="org-ul">
 <li>A resilient distributed dataset (RDD) is a read-only col- lection of objects partitioned across a set of machines that can be rebuilt if a partition is lost.</li>
@@ -106,8 +106,8 @@ In this paper, we focus on one such class of applications: those that reuse a wo
 </div>
 </div>
 
-<div id="outline-container-orge9b8868" class="outline-3">
-<h3 id="orge9b8868"><span class="section-number-3">3.2</span> Parallel Operations</h3>
+<div id="outline-container-orgf8fbc05" class="outline-3">
+<h3 id="orgf8fbc05"><span class="section-number-3">3.2</span> Parallel Operations</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 Several parallel operations can be performed on RDDs:
@@ -124,8 +124,8 @@ We note that Spark does not currently support a grouped reduce operation as in M
 </div>
 </div>
 
-<div id="outline-container-orgc4d7f61" class="outline-3">
-<h3 id="orgc4d7f61"><span class="section-number-3">3.3</span> Shared Variables</h3>
+<div id="outline-container-orgac82e07" class="outline-3">
+<h3 id="orgac82e07"><span class="section-number-3">3.3</span> Shared Variables</h3>
 <div class="outline-text-3" id="text-3-3">
 <ul class="org-ul">
 <li>Programmers invoke operations like map, filter and re- duce by passing closures (functions) to Spark. As is typi- cal in functional programming, these closures can refer to variables in the scope where they are created. Normally, when Spark runs a closure on a worker node, these vari- ables are copied to the worker.（closure使用的变量会被复制到worker上）</li>
@@ -139,11 +139,11 @@ We note that Spark does not currently support a grouped reduce operation as in M
 </div>
 </div>
 
-<div id="outline-container-org68d4d47" class="outline-2">
-<h2 id="org68d4d47"><span class="section-number-2">4</span> Examples</h2>
+<div id="outline-container-orga07e2f1" class="outline-2">
+<h2 id="orga07e2f1"><span class="section-number-2">4</span> Examples</h2>
 </div>
-<div id="outline-container-orgd9edc10" class="outline-2">
-<h2 id="orgd9edc10"><span class="section-number-2">5</span> Implementation</h2>
+<div id="outline-container-org1d39af4" class="outline-2">
+<h2 id="org1d39af4"><span class="section-number-2">5</span> Implementation</h2>
 <div class="outline-text-2" id="text-5">
 
 <div class="figure">
@@ -152,8 +152,8 @@ We note that Spark does not currently support a grouped reduce operation as in M
 </div>
 </div>
 
-<div id="outline-container-org637e950" class="outline-3">
-<h3 id="org637e950"><span class="section-number-3">5.1</span> RDD</h3>
+<div id="outline-container-org20b88b6" class="outline-3">
+<h3 id="org20b88b6"><span class="section-number-3">5.1</span> RDD</h3>
 <div class="outline-text-3" id="text-5-1">
 <p>
 The core of Spark is the implementation of resilient dis- tributed datasets. As an example, suppose that we define a cached dataset called cachedErrs representing error messages in a log file, and that we count its elements us- ing map and reduce, as in Section 3.1:
@@ -214,8 +214,8 @@ Finally, shipping tasks to workers requires shipping closures to them—both the
 </div>
 </div>
 
-<div id="outline-container-org04fb1cd" class="outline-3">
-<h3 id="org04fb1cd"><span class="section-number-3">5.2</span> Shared Variables</h3>
+<div id="outline-container-org80a22e3" class="outline-3">
+<h3 id="org80a22e3"><span class="section-number-3">5.2</span> Shared Variables</h3>
 <div class="outline-text-3" id="text-5-2">
 <p>
 The two types of shared variables in Spark, broadcast variables and accumulators, are imple- mented using classes with custom serialization formats.
@@ -227,12 +227,12 @@ The two types of shared variables in Spark, broadcast variables and accumulators
 </div>
 </div>
 
-<div id="outline-container-org27ad051" class="outline-3">
-<h3 id="org27ad051"><span class="section-number-3">5.3</span> Interpret Intergation</h3>
+<div id="outline-container-org57cbf44" class="outline-3">
+<h3 id="org57cbf44"><span class="section-number-3">5.3</span> Interpret Intergation</h3>
 </div>
 </div>
-<div id="outline-container-org81f0813" class="outline-2">
-<h2 id="org81f0813"><span class="section-number-2">6</span> Results</h2>
+<div id="outline-container-org0d67a37" class="outline-2">
+<h2 id="org0d67a37"><span class="section-number-2">6</span> Results</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>Distributed Shared Memory</li>
@@ -243,11 +243,11 @@ The two types of shared variables in Spark, broadcast variables and accumulators
 </div>
 </div>
 
-<div id="outline-container-orgca50539" class="outline-2">
-<h2 id="orgca50539"><span class="section-number-2">7</span> Related Work</h2>
+<div id="outline-container-org74e504f" class="outline-2">
+<h2 id="org74e504f"><span class="section-number-2">7</span> Related Work</h2>
 </div>
-<div id="outline-container-orga0c7af0" class="outline-2">
-<h2 id="orga0c7af0"><span class="section-number-2">8</span> Discussion and Future Work</h2>
+<div id="outline-container-orgb9c71c5" class="outline-2">
+<h2 id="orgb9c71c5"><span class="section-number-2">8</span> Discussion and Future Work</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 In future work, we plan to focus on four areas:
