[R] publish org files

--- a/html/fun.html
+++ b/html/fun.html
@@ -14,6 +14,21 @@
 <h1 class="title">Fun</h1>
 <hr />
 <p>
+“什么叫细思恐极？”
+</p>
+
+
+<div class="figure">
+<p><img src="images/what-is-fear-after-deep-thought.jpg" alt="what-is-fear-after-deep-thought.jpg" />
+</p>
+</div>
+
+<p>
+一次住院，在看正追的漫画，巡床医生路过看了一眼，淡淡地说，哟，还看连载呀。我&#x2026;.
+</p>
+
+<hr />
+<p>
 额，诺诺的问一句，斯诺克很难么，不就是坐在那里喝水么？
 </p>
 
