[R] publish org files

--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,39 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+我认为对从业者来说，现代的物理学研究工作有点像职业足球。
+</p>
+
+<p>
+第一，大多是年轻人在做，做到一定年龄就会退役去做别的。如果你做的足够好、或者足够幸运，你可以（常常是成为教练）留下来继续做。
+</p>
+
+<p>
+第二，如果少年时代没有专门的训练，就一辈子都没有机会做了。
+</p>
+
+<p>
+第三，很多人谈论它，很多人甚至热爱它，但真正能靠它吃饭的，很少很少。
+</p>
+
+<p>
+第四，它需要你投入全部的身心。你不可能业余从事这个项目。
+</p>
+
+<p>
+第五，英雄人物有太高的声望，使人们常常忽略其中普通的工作者。
+</p>
+
+<p>
+第六，你多多少少做过一些至少在自己看来很厉害的事儿，可能是你一辈子唯一值得吹嘘的事儿。
+</p>
+
+<p>
+第七，你有时候会感叹自己为什么没做出大名堂，但你不会为选择了这个项目而后悔。
+</p>
+
+<hr />
+<p>
 因此，我们平日里最好的做法，就是主动把共有信息变成大众信息，这就如同在战争中最安全的城市是不设防的城市一样。如果我们觉得薪水低了，不妨直接把这种想法说出来。否则，即使老板觉得可以给你涨点工资，但是他可能在想，或许这个员工自己觉得薪水还Okay呢，如果是那样，我何必多此一举呢？而你呢，可能在想，我去年工作那么努力，老板应该会想到给我涨工资。最后，你的工资没有涨，你怨气很大，老板则在想现在补救他或许已经没有用了，于是就没有做，其实他不清楚这时只要他给你补偿，你会不计前嫌的。最后，双方在猜疑中，关系越处越僵，直到你离职，他损失一员大将为止。
 </p>
 
