[R] publish org files

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -16,23 +16,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga4a119c">1. 2018</a></li>
-<li><a href="#orge15c63f">2. 2017</a></li>
-<li><a href="#orgd680152">3. 2016</a></li>
-<li><a href="#org7435f9d">4. 2015</a></li>
-<li><a href="#org20d8562">5. 2014</a></li>
-<li><a href="#org52fc994">6. 2013</a></li>
-<li><a href="#org3036ea6">7. 2012</a></li>
-<li><a href="#orgd1c6104">8. misc</a></li>
-<li><a href="#orga1d8ba1">9. links</a></li>
+<li><a href="#org9a99443">1. 2018</a></li>
+<li><a href="#org24f8bb9">2. 2017</a></li>
+<li><a href="#org56f00d7">3. 2016</a></li>
+<li><a href="#orgbc43b77">4. 2015</a></li>
+<li><a href="#orgf518ac6">5. 2014</a></li>
+<li><a href="#org482cef1">6. 2013</a></li>
+<li><a href="#org17ddbe2">7. 2012</a></li>
+<li><a href="#orgeb21b1c">8. misc</a></li>
+<li><a href="#org0ab5415">9. links</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orga4a119c" class="outline-2">
-<h2 id="orga4a119c"><span class="section-number-2">1</span> 2018</h2>
+<div id="outline-container-org9a99443" class="outline-2">
+<h2 id="org9a99443"><span class="section-number-2">1</span> 2018</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201811 <a href="interview-with-gmail-creator-and-y-combinator-partner-paul-buchheit.html">Interview with Gmail Creator Paul Buchheit</a></li>
+<li>201811 <a href="the-economics-of-getting-hired-as-a-data-scientist.html">The economics of getting hired as a data scientist</a></li>
+<li>201811 <a href="keras-author-on-software-engineering.html">Keras之父写给年轻程序员的33条忠告</a></li>
 <li>201810 <a href="writing-system-software-code-comments.html">Writing system software: code comments</a></li>
 <li>201810 <a href="github-flow.html">GitHub Flow</a></li>
 <li>201810 <a href="fallacies-of-distributed-computing-explained.html">Fallacies of Distributed Computing Explained</a></li>
@@ -90,8 +93,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge15c63f" class="outline-2">
-<h2 id="orge15c63f"><span class="section-number-2">2</span> 2017</h2>
+<div id="outline-container-org24f8bb9" class="outline-2">
+<h2 id="org24f8bb9"><span class="section-number-2">2</span> 2017</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>201712 <a href="geoffrey-hinton-interview-in-coursera.html">Geoffrey Hinton Interview in Coursera</a></li>
@@ -155,8 +158,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd680152" class="outline-2">
-<h2 id="orgd680152"><span class="section-number-2">3</span> 2016</h2>
+<div id="outline-container-org56f00d7" class="outline-2">
+<h2 id="org56f00d7"><span class="section-number-2">3</span> 2016</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>201612 <a href="face-landmark-detection-dlib.html">dlib's face landmark detection</a></li>
@@ -245,8 +248,8 @@
 </div>
 </div>
 
-<div id="outline-container-org7435f9d" class="outline-2">
-<h2 id="org7435f9d"><span class="section-number-2">4</span> 2015</h2>
+<div id="outline-container-orgbc43b77" class="outline-2">
+<h2 id="orgbc43b77"><span class="section-number-2">4</span> 2015</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>201512 <a href="ms-presentation.html">Michael Stonebraker Presentation</a></li>
@@ -315,8 +318,8 @@
 </div>
 </div>
 
-<div id="outline-container-org20d8562" class="outline-2">
-<h2 id="org20d8562"><span class="section-number-2">5</span> 2014</h2>
+<div id="outline-container-orgf518ac6" class="outline-2">
+<h2 id="orgf518ac6"><span class="section-number-2">5</span> 2014</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li>201412 <a href="the-golden-circle.html">The Golden Circle</a></li>
@@ -337,8 +340,8 @@
 </div>
 </div>
 
-<div id="outline-container-org52fc994" class="outline-2">
-<h2 id="org52fc994"><span class="section-number-2">6</span> 2013</h2>
+<div id="outline-container-org482cef1" class="outline-2">
+<h2 id="org482cef1"><span class="section-number-2">6</span> 2013</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>201312 <a href="have-a-nice-sleep-and-straighten-up.html">哪里还有时间去沮丧</a></li>
@@ -364,8 +367,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3036ea6" class="outline-2">
-<h2 id="org3036ea6"><span class="section-number-2">7</span> 2012</h2>
+<div id="outline-container-org17ddbe2" class="outline-2">
+<h2 id="org17ddbe2"><span class="section-number-2">7</span> 2012</h2>
 <div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li>201211 <a href="not-easy-as-you-think.html">没有那么简单</a></li>
@@ -393,8 +396,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd1c6104" class="outline-2">
-<h2 id="orgd1c6104"><span class="section-number-2">8</span> misc</h2>
+<div id="outline-container-orgeb21b1c" class="outline-2">
+<h2 id="orgeb21b1c"><span class="section-number-2">8</span> misc</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li><a href="images/cjy-baidu-blog-archive.html">百度空间存档(baidu space archive)</a></li>
@@ -420,8 +423,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga1d8ba1" class="outline-2">
-<h2 id="orga1d8ba1"><span class="section-number-2">9</span> links</h2>
+<div id="outline-container-org0ab5415" class="outline-2">
+<h2 id="org0ab5415"><span class="section-number-2">9</span> links</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 People:
