[R] publish org files

--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,11 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+每当我代码越写越乱的时候，我就去写单元测试，然后就开始越写越顺了。
+</p>
+
+<hr />
+<p>
 纯自学第一遍读最好不超过两月，读不懂的跳过去，不求甚解。对一个发展迅速、知识尚未固化、外延极广的学科，先搭建大体框架要紧，开头不要试图弄懂所有细节。否则要么两年下来仍懵懵懂懂，要么对少量内容有了解、其他无知，失去进一步学习中触类旁通的机会。像画油画一样，一层层往上刷，后面再细琢磨。
 </p>
 
