[R] publish org files

--- a/html/paste.html
+++ b/html/paste.html
@@ -14,15 +14,36 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
-每当我代码越写越乱的时候，我就去写单元测试，然后就开始越写越顺了。
+@湾区日报BayArea: 以前一个同学在某大公司工作，说他有时候看到同事遇到困难，本能地想去帮忙，但一想到对自己晋升一点用都没有，同事如果出活了，他自己就不好看，于是忍住了。
+</p>
+
+<p>
+【为什么我要离开 Google 单干】作者在 Google 待了 4 年，为能升职费劲心思，工作中所做的一切都是为了能过晋升委员会这关。好好修 bug、帮同事、写高质量代码等，不能在与晋升无关的事上浪费时间。觉得没劲，就离职了。
+</p>
+
+<p>
+<a href="https://wanqu.co/a/6263/%E4%B8%BA%E4%BB%80%E4%B9%88%E6%88%91%E8%A6%81%E7%A6%BB%E5%BC%80-google-%E5%8D%95%E5%B9%B2/">https://wanqu.co/a/6263/为什么我要离开-google-单干/</a>
+</p>
+
+<p>
+@梁斌Penny: 出差火车上废老劲了看完这篇谷歌员工奋斗多年一次升值机会也没有，最终绝望离职的故事。深感当厂职工太苦了。。内心不知道有过多少次挣扎。最终走上了做社会化工作，积攒和尝试创业机会的道路。。这些年我真是目睹了无数优秀人才被大厂折磨得泯为众人，不复读书时的意气风发。不爽就创业算了，不伺候大厂那些大爷们.
 </p>
 
 <hr />
 <p>
-纯自学第一遍读最好不超过两月，读不懂的跳过去，不求甚解。对一个发展迅速、知识尚未固化、外延极广的学科，先搭建大体框架要紧，开头不要试图弄懂所有细节。否则要么两年下来仍懵懵懂懂，要么对少量内容有了解、其他无知，失去进一步学习中触类旁通的机会。像画油画一样，一层层往上刷，后面再细琢磨。
+@图拉鼎: 每当我代码越写越乱的时候，我就去写单元测试，然后就开始越写越顺了。
 </p>
 
 <hr />
+<p>
+@南大周志华: 纯自学第一遍读最好不超过两月，读不懂的跳过去，不求甚解。对一个发展迅速、知识尚未固化、外延极广的学科，先搭建大体框架要紧，开头不要试图弄懂所有细节。否则要么两年下来仍懵懵懂懂，要么对少量内容有了解、其他无知，失去进一步学习中触类旁通的机会。像画油画一样，一层层往上刷，后面再细琢磨。
+</p>
+
+<hr />
+<p>
+@GK同人于野
+</p>
+
 <p>
 我认为对从业者来说，现代的物理学研究工作有点像职业足球。
 </p>
