--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,32 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+<a href="https://www.youtube.com/watch?v=xLrdtCWjmGc">https://www.youtube.com/watch?v=xLrdtCWjmGc</a>
+</p>
+
+<p>
+你等年紀輕輕一遇挫折，便鬆散懈怠。日後怎成大器？
+</p>
+
+<p>
+為人者，有大度成大器也！
+</p>
+
+<p>
+夫處事之道，亦即應變之術，屺可偏執一端？
+</p>
+
+<p>
+用兵之道亦然如此，皆貴在隨機應變！
+</p>
+
+<hr />
+<p>
+跟码农最困难的对话一般是：“这个做的太复杂了”，“我觉得这个一点都不复杂。来我跟你解释一下。” 很多人不理解的是，说一个东西太复杂和说一个东西太贵一样，本质上都是两个潜台词：你没想象中那么多钱/资源支持这个复杂性，这个东西不值得那么多钱/复杂性。代码的债务属性比资产属性大多了。
+</p>
+
+<hr />
+<p>
 市场竞争，政治竞选，生物进化，天气，有时会出现一个类似漩涡 (vortex) 这种极端现象。漩涡这种东西，是不能直接面对面斗争抵抗的，否则很容易被吸进去，不管你如何挣扎反抗。 更好的办法，是保持一个安全的距离，培养制造属于自己的漩涡，然后把大家慢慢吸过来。最好的投资标的，抽象上有和漩涡类似的结构。
 </p>
 
