[R] publish org files

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -75,7 +75,7 @@
 <li>201805 <a href="why-study-history.html">为什么学习历史</a> 摘自得到的《硅谷来信》</li>
 <li>201804 <a href="ssh-proxycommand-on-ssr.html">ssh proxycommand on ssr</a></li>
 <li>201804 <a href="getting-started-elk-beat.html">本地跑跑ELK + Beat(日志收集和指标收集)</a></li>
-<li>201803 <a href="nginx-https-redirect-loop.html">Nginx的https重定向循环问题</a></li>
+<li>201803 <a href="nginx-https-redirect-loop.html">nginx的https重定向循环问题</a></li>
 <li>201803 <a href="what-habits-make-a-programmer-great.html">What habits make a programmer great?</a> about meta-habit</li>
 <li>201803 <a href="how-to-build-your-own-alpha-zero-ai.html">How to build your own AlphaZero AI using Python and Keras</a></li>
 <li>201803 <a href="on-being-a-senior-engineer.html">On Being A Senior Engineer</a></li>
