--- a/html/poetry-and-movie.html
+++ b/html/poetry-and-movie.html
@@ -34,6 +34,7 @@
 <li><a href="#orge54de5f">16. 白日梦想家(The Secret Life of Walter Mitty)</a></li>
 <li><a href="#orgde66aed">17. Boots of Spanish Leather (Bob Dylan)</a></li>
 <li><a href="#orgc930449">18. The Times They Are A-Changin’ (Bob Dylan)</a></li>
+<li><a href="#orgd860073">19. It Ain’t Me, Babe (Bob Dylan)</a></li>
 </ul>
 </div>
 </div>
@@ -820,6 +821,53 @@ Will later be past<br />
 The order is rapidly fadin’<br />
 And the first one now will later be last<br />
 For the times they are a-changin’<br />
+</p>
+</div>
+</div>
+<div id="outline-container-orgd860073" class="outline-2">
+<h2 id="orgd860073"><span class="section-number-2">19</span> It Ain’t Me, Babe (Bob Dylan)</h2>
+<div class="outline-text-2" id="text-19">
+<p class="verse">
+Go ’way from my window<br />
+Leave at your own chosen speed<br />
+I’m not the one you want, babe<br />
+I’m not the one you need<br />
+You say you’re lookin’ for someone<br />
+Never weak but always strong<br />
+To protect you an’ defend you<br />
+Whether you are right or wrong<br />
+Someone to open each and every door<br />
+But it ain’t me, babe<br />
+No, no, no, it ain’t me, babe<br />
+It ain’t me you’re lookin’ for, babe<br />
+<br />
+<br />
+Go lightly from the ledge, babe<br />
+Go lightly on the ground<br />
+I’m not the one you want, babe<br />
+I will only let you down<br />
+You say you’re lookin’ for someone<br />
+Who will promise never to part<br />
+Someone to close his eyes for you<br />
+Someone to close his heart<br />
+Someone who will die for you an’ more<br />
+But it ain’t me, babe<br />
+No, no, no, it ain’t me, babe<br />
+It ain’t me you’re lookin’ for, babe<br />
+<br />
+<br />
+Go melt back into the night, babe<br />
+Everything inside is made of stone<br />
+There’s nothing in here moving<br />
+An’ anyway I’m not alone<br />
+You say you’re lookin' for someone<br />
+Who’ll pick you up each time you fall<br />
+To gather flowers constantly<br />
+An’ to come each time you call<br />
+A lover for your life an’ nothing more<br />
+But it ain’t me, babe<br />
+No, no, no, it ain’t me, babe<br />
+It ain’t me you’re lookin’ for, babe<br />
 </p>
 </div>
 </div>
