--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,11 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+马克思大女儿燕妮曾问历史学家维特克：“您能用最简明的语言，把人类历史浓缩在一本小册子里吗？” 维特克说：“只要四句德国谚语就够了：1、上帝让谁灭亡，总是先让他膨胀；2、时间是筛子，最终会淘去一切沉渣；3、蜜蜂盗花，结果却使花开茂盛；4、暗透了，更能看得见星光。”
+</p>
+
+<hr />
+<p>
 <a href="https://www.youtube.com/watch?v=xLrdtCWjmGc">https://www.youtube.com/watch?v=xLrdtCWjmGc</a>
 </p>
 
