[R] publish org files

--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,56 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+@图拉鼎 <a href="https://weibo.com/1846569133/H9nG2Fk7r?ref=collection">https://weibo.com/1846569133/H9nG2Fk7r?ref=collection</a>
+</p>
+
+<p>
+今年的一个小改变是：买书不看完，并继续买，完全没有心理负担了。
+</p>
+
+<p>
+以前常常被「买书如山倒、看书如抽丝」这句话所影响，想买新书时看着没看完的书或很久没翻书的行为而心生愧疚而停止继续购入。事实上这反而造成了我「停止看书」的行为。
+</p>
+
+<p>
+自从懂了买书不是为了看完，即使只看几页但有所收获就好，看不看完又有什么关系。于是很随性的买买买、看看看，买电子书也买实体书，反而在过去的一年看了很多书。
+</p>
+
+<p>
+而且买了很多书后，发现囤书，甚至只是标记收藏都是有意义的行为，在某种程度上，这使得在我脑中建立起来了一个「索引」，就像查字典时会用偏旁或字母去查，知道在具体情况下该去看哪本书了。只是买来翻看过，更容易建立「强索引」，而简单的标记收藏只是「弱索引」，所以，对一本书好奇，就尽量还是买来看。
+</p>
+
+<p>
+不知道明年我会对看书这行为又有什么新想法，总之，这就是今年的一个小小改变。
+</p>
+
+<hr />
+<p>
+网友：手哥，我老婆就爱看湖南卫视综艺节目，每次看的时候笑得像个智障一样。还能挽救了吗？
+</p>
+
+
+<p>
+这位网友，我觉得这是好事。你老婆爱看湖南卫视应该不是一天两天的事了，应该在交往之前就爱看吧？这就说明你俩层次不会差太多。你不可能是飘逸的艺术家或者是不羁的浪子，你就是一个普通男人对吧？
+</p>
+
+
+<p>
+你想，你找一个这种老婆，30岁的人，16岁的心态，每天下了班看看娱乐综艺哈哈一笑，就没啥烦恼了，也不给你惹事生非给你添堵，这不是好事吗？以前有句话说“农民有三宝，丑妻薄田破棉袄”，这就是老祖宗的大智慧，媳妇特别优秀，就难免被人惦记。你这种普通男人一般都无福消受。
+</p>
+
+
+<p>
+我知道有很多高精尖的女性，每天游泳健身，不是今天在北海道滑雪，就是明天去巴厘岛潜水，英文叽里呱啦跟老外谈笑风生。你往这种女孩身边一站，一种自卑感就油然而生，浑身上下不自在，这种女性不看湖南卫视，可是你也搞不定啊？是不是。
+</p>
+
+
+<p>
+所以你应该珍惜你老婆，看湖南卫视层次是低，但是大概率也是个节约省钱会过日子的好女孩，不买什么奢侈品，购物靠淘宝，平时穿个bershka的衣服顶天了，你送她个coach，她能高兴好几天。
+</p>
+
+<hr />
+<p>
 &gt;&gt; 吴老师，听了这两天的课后，我感觉“FUD策略”的本质其实就是：信息不对称。现代社会信息越来越透明、交流越来越畅通，这个策略是否就会失效？
 </p>
 
